@@ -19,8 +19,8 @@
 from __future__ import annotations
 
 import logging
-import warnings
-from datetime import date
+# import warnings
+# from datetime import date
 from functools import partial
 
 from django.conf import settings
@@ -347,62 +347,62 @@ class Base(CremeEntity):
     #     if save:
     #         self.save()
 
-    def build(self, template: Base):
-        warnings.warn(
-            'The method billing.models.Base.build() is deprecated; '
-            'use the new conversion/spawning systems instead.',
-            DeprecationWarning,
-        )
-        self._address_auto_copy = False
-
-        self._build_object(template)
-        self._post_save_clone(template)  # Copy addresses
-        self._post_clone(template)  # Copy lines
-        self._build_relations(template)
-        self._build_properties(template)
-
-        return self
-
-    build.alters_data = True
-
-    def _build_object(self, template: Base):
-        warnings.warn(
-            'The method billing.models.Base._build_object() is deprecated.',
-            DeprecationWarning,
-        )
-
-        self.user         = template.user
-        self.name         = template.name
-        self.number       = template.number
-        self.discount     = template.discount
-        self.currency     = template.currency
-        self.comment      = template.comment
-        self.payment_info = template.payment_info
-
-        self.issuing_date = self.expiration_date = date.today()
-
-        self.source = template.source
-        self.target = template.target
-
-        self.save()
-
-        # NB: not copied:
-        # - additional_info
-        # - payment_terms
-
-    def _build_relations(self, template: Base):
-        warnings.warn(
-            'The method billing.models.Base._build_relations() is deprecated.',
-            DeprecationWarning,
-        )
-        self._copy_relations(template)
-
-    def _build_properties(self, template: Base):
-        warnings.warn(
-            'The method billing.models.Base._build_properties() is deprecated.',
-            DeprecationWarning,
-        )
-        self._copy_properties(template)
+    # def build(self, template: Base):
+    #     warnings.warn(
+    #         'The method billing.models.Base.build() is deprecated; '
+    #         'use the new conversion/spawning systems instead.',
+    #         DeprecationWarning,
+    #     )
+    #     self._address_auto_copy = False
+    #
+    #     self._build_object(template)
+    #     self._post_save_clone(template)  # Copy addresses
+    #     self._post_clone(template)  # Copy lines
+    #     self._build_relations(template)
+    #     self._build_properties(template)
+    #
+    #     return self
+    #
+    # build.alters_data = True
+    #
+    # def _build_object(self, template: Base):
+    #     warnings.warn(
+    #         'The method billing.models.Base._build_object() is deprecated.',
+    #         DeprecationWarning,
+    #     )
+    #
+    #     self.user         = template.user
+    #     self.name         = template.name
+    #     self.number       = template.number
+    #     self.discount     = template.discount
+    #     self.currency     = template.currency
+    #     self.comment      = template.comment
+    #     self.payment_info = template.payment_info
+    #
+    #     self.issuing_date = self.expiration_date = date.today()
+    #
+    #     self.source = template.source
+    #     self.target = template.target
+    #
+    #     self.save()
+    #
+    #     # NB: not copied:
+    #     # - additional_info
+    #     # - payment_terms
+    #
+    # def _build_relations(self, template: Base):
+    #     warnings.warn(
+    #         'The method billing.models.Base._build_relations() is deprecated.',
+    #         DeprecationWarning,
+    #     )
+    #     self._copy_relations(template)
+    #
+    # def _build_properties(self, template: Base):
+    #     warnings.warn(
+    #         'The method billing.models.Base._build_properties() is deprecated.',
+    #         DeprecationWarning,
+    #     )
+    #     self._copy_properties(template)
 
     # TODO: remove *args, **kwargs
     def _create_addresses(self, *args, **kwargs):
