@@ -16,8 +16,8 @@
 #    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 ################################################################################
 
+# import warnings
 import logging
-import warnings
 
 from django.db import models
 from django.urls import reverse
@@ -26,7 +26,7 @@ from django.utils.translation import gettext_lazy as _
 # from creme.persons.workflow import transform_target_into_customer
 from creme.creme_core.models import deletion
 
-from .. import get_template_base_model
+# from .. import get_template_base_model
 from ..constants import DEFAULT_DECIMAL
 from .base import Base
 from .other_models import InvoiceStatus, get_default_invoice_status_pk
@@ -104,22 +104,22 @@ class AbstractInvoice(Base):
     def get_lv_absolute_url():
         return reverse('billing__list_invoices')
 
-    def build(self, template):
-        warnings.warn(
-            'The method billing.models.Invoice.build() is deprecated.',
-            DeprecationWarning,
-        )
-
-        status = None
-
-        if isinstance(template, get_template_base_model()):
-            status = InvoiceStatus.objects.filter(uuid=template.status_uuid).first()
-
-        self.status = status or InvoiceStatus.objects.default()
-
-        super().build(template)
-
-        return self
+    # def build(self, template):
+    #     warnings.warn(
+    #         'The method billing.models.Invoice.build() is deprecated.',
+    #         DeprecationWarning,
+    #     )
+    #
+    #     status = None
+    #
+    #     if isinstance(template, get_template_base_model()):
+    #         status = InvoiceStatus.objects.filter(uuid=template.status_uuid).first()
+    #
+    #     self.status = status or InvoiceStatus.objects.default()
+    #
+    #     super().build(template)
+    #
+    #     return self
 
 
 class Invoice(AbstractInvoice):
